Now check if a frontmatter is valid (exists and type is here)